--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@chromaui/addon-visual-tests": "^0.0.95",
     "@storybook/addon-essentials": "^7.5.0-alpha.3",
     "@storybook/addon-interactions": "^7.5.0-alpha.3",
     "@storybook/addon-links": "^7.5.0-alpha.3",
